# VSCode-Template

./: CMakeLists.txt
source/: main.cpp
tests/: CMakeLists.txt  FooTest.cpp
